tests/integration/snapshots/integration__conformance__n_string_single_quote.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
['single quote']
stdout ---

stderr ---
error: unexpected character `'`. expected start of a json value
 --> stdin:1:2
  |
1 | ['single quote']
  |  ^
