tests/integration/snapshots/integration__conformance__n_string_single_string_no_double_quotes.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
abc
stdout ---

stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:1
  |
1 | abc
  | ^
