tests/integration/snapshots/integration__conformance__n_string_single_string_no_double_quotes.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
abc
stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:1
  |
1 | abc
  | ^
