tests/integration/snapshots/integration__conformance__n_string_unescaped_tab.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["	"]
stdout ---

stderr ---
error: unexpected unescaped control character `\t` in string literal
 --> stdin:1:3
  |
1 | ["    "]
  |   ^^^^
  |
help: replace the control character with its escaped form
  |
1 | ["\t"]
  |   ++
