tests/integration/snapshots/integration__conformance__n_structure_array_trailing_garbage.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[1]x
stdout --- 
<empty>
stderr --- 
error: unexpected character `x`. expected start of a json value
 --> stdin:1:4
  |
1 | [1]x
  |    ^
